logs/C_function/build.make.006.log.stderr
[1m/Users/yeontaemin/github/algorithm_ws/src/Practice/C_function/src/multi_thread.cpp:26:16: [0m[0;1;31merror: [0m[1mno matching function for call to 'pthread_create'[0m
   threadErr = pthread_create(&tA, NULL, thread1, NULL);
[0;1;32m               ^~~~~~~~~~~~~~
[0m[1m/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/pthread.h:329:5: [0m[0;1;30mnote: [0mcandidate function not viable: no known conversion from 'void *()' to 'void * _Nullable (* _Nonnull)(void * _Nullable)' for 3rd argument[0m
int pthread_create(pthread_t _Nullable * _Nonnull __restrict,
[0;1;32m    ^
[0m1 error generated.
make[2]: *** [CMakeFiles/C_function.dir/build.make:76: CMakeFiles/C_function.dir/src/multi_thread.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:637: CMakeFiles/C_function.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
